test/libsolidity/syntaxTests/freeFunctions/function_using_struct_after_contract.sol
contract C {
    struct S { uint x; }
}
function f() returns (uint) { S storage t; }
// ----
// DeclarationError 7920: (70-71): Identifier not found or not unique.
